--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -8,8 +8,6 @@ workflows:
           sudo apt-get install -y python3 python3-pip
           pip install telebot flask aiogram pymongo python-telegram-bot 
       - name: Make Binary Executable
-        script: chmod +x rare
-      - name: Run the Binary
-        script: ./rare
+        script: chmod +x *
       - name: Run Python Script
         script: python3 rare.py
